@startuml command-pattern-class-diagram
title Command pattern in PlatformerMCR — record once, replay on clones

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName sans-serif
skinparam packageStyle rectangle
hide empty members

package "Invokers (two of them)" {
    class PlayerCommandInvoker <<Invoker — live>> {
        -lastMove : Vector2
        -lastJumpHeld : bool
        +Timeline : CommandTimeline
        +Tick(tick : int, dt : float)
    }
    class ClonePlayback <<Invoker — replay>> {
        +Play(recording : CommandTimeline)
        +Tick(tick : int, dt : float)
    }
}

package "Recording (history)" {
    class CommandTimeline {
        -frames : List<TickRecord>
        -recordingEndTick : int
        +Record(tick : int, changed : List<ICommand>)
        +GetAtTick(tick : int) : TickRecord
        +SliceFromTick(fromTick : int) : CommandTimeline
        +TruncateAfterTick(tick : int)
    }
    class TickRecord {
        +Tick : int
        +Commands : List<ICommand>
    }
}

package "Commands (intent as objects)" {
    interface ICommand <<Command>> {
        +Execute(target : Player)
    }
    interface IStickyCommand <<marker>>

    class MoveCommand {
        -direction : Vector2
    }
    class JumpHeldCommand {
        -held : bool
    }
    class JumpCommand
    class UseCommand
}

package "Receivers" {
    class Player <<Receiver (facade)>> {
        +Move(direction : Vector2)
        +Jump()
        +SetJumpHeld(held : bool)
        +Use()
    }
    class PlayerController {
        +SetDirection(d : Vector2)
        +RequestJump()
        +SetJumpHeld(held : bool)
        +Tick(tick : int, dt : float)
    }
    class InteractionDetector {
        +GetClosest() : IInteractable
    }
}

class RewindDirector
class GameClock {
    +Tick : int
}

' ── command hierarchy ──
ICommand <|-- IStickyCommand
IStickyCommand <|.. MoveCommand
IStickyCommand <|.. JumpHeldCommand
ICommand <|.. JumpCommand
ICommand <|.. UseCommand

' ── recording ──
CommandTimeline *-down-> "0..*" TickRecord : change\nticks only
TickRecord o-down-> "1..*" ICommand

' ── the two invokers share one recording ──
PlayerCommandInvoker *-right-> CommandTimeline : Record(tick, changed)
ClonePlayback -right-> CommandTimeline : GetAtTick(tick)
PlayerCommandInvoker .down.> ICommand : «creates» from\ninput changes
ClonePlayback .down.> ICommand : re-executes\non the clone

' ── commands act on the receiver passed to Execute ──
ICommand .down.> Player : Execute(target)
Player -down-> PlayerController : Move / Jump /\nSetJumpHeld
Player -down-> InteractionDetector : Use → GetClosest()\n.Interact()

' ── orchestration ──
GameClock -down-> PlayerCommandInvoker : Tick(t, dt)
GameClock -down-> ClonePlayback : Tick(t, dt)
RewindDirector .down.> CommandTimeline : SliceFromTick(T) /\nTruncateAfterTick(T-1)
RewindDirector .down.> ClonePlayback : spawns echo,\nPlay(slice)

note as N1
    **The adaptation that matters:** the receiver is
    passed to Execute, **not stored in the command**
    → the same recorded instance drives the live
    player, then a clone.
end note
N1 .. ICommand

note as N2
    Sticky = effect persists until changed
    → logged only on change (sparse);
    a slice re-establishes sticky state at its start.
end note
N2 .. IStickyCommand

@enduml
